[tool.poetry]
name = "pubmed_fetcher"
version = "0.1.0"
description = "Fetch and filter PubMed papers"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26"
pandas = "^1.3"
click = "^8.0"

[tool.poetry.scripts]
get-papers-list = "pubmed_fetcher.cli:main"
